# Computergrafik

./: .gitignore  CMakeLists.txt  ComputerGrafik.pro  MeinQtProjektpro.sec
src/: camera.cpp  camera.h  lights.h  main.cpp  mainwindow.cpp  mainwindow.h  material.h  mesh.cpp  mesh.h  meshoproom.cpp  meshoproom.h  modelloaderh.h  myglwidget.cpp  myglwidget.h  res.qrc  skybox.cpp  skybox.h  vertex.h
src/objects/: notausgang.mtl
src/shader/: oproom.frag  oproom.vert  phong.frag  phong.vert  sample.frag  sample.vert  sample_texture.frag  skybox.frag  skybox.vert
src/textures/: lamp_normal_2k.png.backup
ui/: mainwindow.ui
